# digital-signature-certificate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: certificate.py  digital_signature.py  main.py  utils.py
tests/: test_certificate.py  test_digital_signature.py
tests/data/: input2.txt  input3.txt
